# YasOpenstack

./: .gitignore  .pylintrc  README.md  README.rst  instance-init.sh  requirements.txt  setup.cfg  slackbot-config-example.env
etc/yas/: openstack.yml
facade/: __init__.py
facade/api/: __init__.py
facade/api/server/: wsgi.py
facade/bot/: __init__.py
facade/bot/slack/: __init__.py
facade/openstack/: __init__.py  config.py  configuration.py  server.py  yaml_file_config.py
yas_openstack/: __init__.py  configuration.py  create_handler.py  delete_handler.py  handler.py  list_handler.py  openstack_handler.py  server.py  server_create_handler.py  server_delete_handler.py  server_list_handler.py  yaml_file_config.py
