[metadata]
name = YasOpenstackHandler
author = Brandon Schlueter
author_email = YasOpenstackHandler@schlueter.blue
summary = A simple interface to openstack with additional metadata
description-file = README.rst
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = yas_openstack

data_files =
    etc/yas/ =
        etc/yas/openstack.yml
